# rv-longan-nano-clion-ota-demo

./: .gitignore  CMakeLists.txt  Readme.md
GD32VF103_Firmware_Library_V1.0.0/Examples/CAN/communication_Loopback/: main.c
GD32VF103_Firmware_Library_V1.0.0/Examples/CAN/communication_among_CANs/: main.c
GD32VF103_Firmware_Library_V1.0.0/Examples/CAN/communication_among_Devices/: main.c
GD32VF103_Firmware_Library_V1.0.0/Examples/TIMER/TIMER0_6-steps/: gd32vf103_it.h
GD32VF103_Firmware_Library_V1.0.0/Examples/TIMER/TIMERs_parallelsynchro/: readme.txt
GD32VF103_Firmware_Library_V1.0.0/Examples/USBFS/USB_Device/Audio/Include/: usbd_conf.h
GD32VF103_Firmware_Library_V1.0.0/Examples/USBFS/USB_Device/Audio/Source/: usbd_audio_out_if.c
GD32VF103_Firmware_Library_V1.0.0/Examples/USBFS/USB_Device/DFU/: readme.txt
GD32VF103_Firmware_Library_V1.0.0/Examples/USBFS/USB_Device/DFU/Include/: flash_if.h
GD32VF103_Firmware_Library_V1.0.0/Examples/USBFS/USB_Device/DFU/Source/: dfu_mal.c  flash_if.c  gd32vf103_hw.c
Inc/lcd/: lcd.h  oledfont.h
Src/: lcd.c  main.c  pict.inc
